<resources>
    <string name="app_name">驾驶伴侣</string>
    <string name="action_settings">Settings</string>
    <string name="loading">加载中…</string>
    <string name="User">请输入手机号码</string>
    <string name="Password">请输入密码</string>
    <string name="LoginBtn">登录</string>
    <string name="Service">服务</string>
    <string name="user_center_name">姓名:</string>
    <string name="name_text">奥巴马</string>
    <string name="user_center_sex">性别:</string>
    <string name="sex">男</string>
    <string name="user_center_location">地区:</string>
    <string name="location">吉林 长春</string>
    <string name="user_center_tel_change">修改绑定手机</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="user_center_password_change">修改密码</string>
    <string name="user_center_register">注册新账号</string>
    <string name="user_center_service">联系客服</string>
    <string name="user_center_quit">退出当前账号</string>
    <string name="refuel_user_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="refuel_user_tel">联系电话:</string>
    <string name="refuel_time">加油日期:</string>
    <string name="refuel_station">加&#160;&#160;油&#160;&#160;站:</string>
    <string name="refuel_type">加油类型:</string>
    <string name="refuel_price">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价:</string>
    <string name="refuel_count">加油金额:</string>
    <string name="refuel_amount">加&#160;&#160;油&#160;&#160;量:</string>
    <string name="sum_money">金额:</string>
    <string name="currency">元</string>
    <string name="make_order">生成订单</string>
    <string name="more">更多</string>
    <string name="register_tel">手机号:</string>
    <string name="register_get_tel">请输入手机号码</string>
    <string name="register_captcha">验证码:</string>
    <string name="register_captcha_button">获取验证码</string>
    <string name="register_verify">验证</string>
    <string name="register_name">姓名:</string>
    <string name="register_get_name">请输入姓名</string>
    <string name="register_sex">性别:</string>
    <string name="register_sex_man">男</string>
    <string name="register_sex_woman">女</string>
    <string name="register_location">地区:</string>
    <string name="register_location_text">吉林 长春</string>
    <string name="register_password">密码:</string>
    <string name="register_get_password">请输入密码</string>
    <string name="register_confirm_password">确认:</string>
    <string name="register_confirm_text">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="forget_password_tel">绑定手机:</string>
    <string name="forget_password_tel_text">159****1100</string>
    <string name="forget_password_captcha">请输入验证码</string>
    <string name="forget_password_captcha_button">获取验证码</string>
    <string name="forget_password_verify">验证</string>
    <string name="forget_password_password">密码:</string>
    <string name="forget_password_get_password">请输入新密码</string>
    <string name="forget_password_confirm_password">确认:</string>
    <string name="forget_password_confirm_text">请再次输入新密码</string>
    <string name="forget_password_change">提交</string>
    <string name="change_tel_tel">原绑定手机:</string>
    <string name="change_tel_tel_text">159****1100</string>
    <string name="change_tel_captcha">请输入验证码</string>
    <string name="change_tel_captcha_button">获取验证码</string>
    <string name="change_tel_verify">验证</string>
    <string name="change_tel_new_tel">新绑定手机:</string>
    <string name="change_tel_new_tel_text">请输入新手机号码</string>
    <string name="change_tel_new_tel_captcha">请输入验证码</string>
    <string name="change_tel_new_tel_captcha_button">获取验证码</string>
    <string name="change_tel_new_tel_verify">验证</string>
    <string name="change_tel_submit">提交</string>
    <string name="add_car_brand">汽车品牌:</string>
    <string name="add_car_type">汽车型号:</string>
    <string name="add_car_license">车牌号码:</string>
    <string name="add_car_license_text">请输入车牌号码</string>
    <string name="add_car_engine_num">发动机号:</string>
    <string name="add_car_engine_num_text">请输入发动机号</string>
    <string name="add_car_level">车身级别:</string>
    <string name="add_car_km">行驶里程:</string>
    <string name="add_car_km_text">请输入行驶里程</string>
    <string name="add_car_engine_performance">发动机性能:</string>
    <string name="add_car_transmission">变速器性能:</string>
    <string name="add_car_light">车大灯状况:</string>
    <string name="add_car_state_good">好</string>
    <string name="add_car_state_abnormal">异常</string>
    <string name="add_car_add_button">添加</string>
    <string name="car_refuel_type">燃油类型:</string>
    <string name="distance">距离:</string>
    <string name="order">预约</string>
    <string name="fuel_amount">燃油量:</string>
    <string name="local_station_price">本站油价</string>
    <string name="gastprice">省控油价</string>
    <string name="sure">确定</string>
    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
    <string name="csy_btn_query">开始查询</string>
    <string name="csy_cxdz_lab">查询地:</string>
    <string name="csy_cxdz_tip">请选择查询地</string>
    <string name="csy_chepai_lab">车牌号:</string>
    <string name="csy_chepai_tip">请输入车牌号后6位</string>
    <string name="csy_chejia_lab">车架号:</string>
    <string name="csy_engine_lab">发动机号:</string>
    <string name="csy_close">关闭</string>
    <string name="illegal_query_others">其他车辆查询</string>
    <string name="illegal_query_title">违章查询</string>
    <string name="photos_num">%1$d张</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="file">file://</string>
    <string name="change_password_old_password">原密码：</string>
    <string name="change_password_old_password_text">请输入原密码</string>
    <string name="change_password_new_password">新密码：</string>
    <string name="change_password_new_password_text">请输入新密码</string>
    <string name="change_password_confirm_password">确认密码：</string>
    <string name="change_password_confirm_password_text">请再次输入密码</string>
    <string name="change_password_cancel">取消</string>
    <string name="change_password_confirm">确定</string>
    <string name="change_password_tips">修改密码</string>
    <string name="change_tel_old">原绑定手机：</string>
    <string name="change_tel_old_text"></string>
    <string name="user_info_name">姓名：</string>
    <string name="user_info_sex">性别：</string>
    <string name="fuel_dialog">油量不足20%，请及时加油</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="reset_password_confirm">提交</string>
    <string name="navi">附近设施</string>
    <string name="order_refuel">预约加油</string>
    <string name="car_manage">车辆管理</string>
    <string name="music_manage">音乐播放</string>
    <string name="driver_record">行车记录</string>
    <string name="share">分享</string>
    <string name="user_center">个人中心</string>
    <string name="settings">设置</string>
    <string name="change_phone_password">密码:</string>
    <string name="change_phone_text">请输入密码</string>
    <string name="write_order">填写订单</string>
    <string name="food">美食</string>
    <string name="hotel">酒店</string>
    <string name="bus_station">公交站</string>
    <string name="bank">银行</string>
    <string name="movie">电影</string>
    <string name="train">火车站</string>
    <string name="ktv">KTV</string>
    <string name="market">商场</string>
    <string name="order_manage">订单管理</string>
    <string name="driver_car_type">行车模式</string>
    <string name="undriver_car_type">非行车模式</string>
    <string name="crowded_type">堵车模式</string>
    <string name="fast_type">高速模式</string>
</resources>
