<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/corners_bg_white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:text="@string/change_password_old_password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/old_password"
                    android:hint="@string/change_password_old_password_text"
                    android:paddingLeft="15dp"
                    android:background="@drawable/refuel_input_bg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:text="@string/change_password_new_password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/new_password"
                    android:hint="@string/change_password_new_password_text"
                    android:paddingLeft="15dp"
                    android:background="@drawable/refuel_input_bg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:text="@string/change_password_confirm_password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/confirm_password"
                    android:inputType="textPassword"
                    android:hint="@string/change_password_confirm_password_text"
                    android:paddingLeft="15dp"
                    android:background="@drawable/refuel_input_bg"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>