<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_bg">
    <include  layout="@layout/include_title_view"
        android:id="@+id/title_bar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/refuel_input_bg"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/linearLayout">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/select_car_name"
                android:layout_margin="2dp"
                android:background="@drawable/item_press_bg">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_brand"
                    android:id="@+id/text1"/>
                <TextView
                    style="@style/add_car_item_input_style"
                    android:id="@+id/car_name"
                    android:layout_toRightOf="@+id/text1"/>
                <ImageView
                    style="@style/item_arrow"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:background="@drawable/item_press_bg"
                android:id="@+id/select_car_type">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_type"
                    android:id="@+id/text2"/>
                <TextView
                    style="@style/add_car_item_input_style"
                    android:id="@+id/car_type"
                    android:layout_toRightOf="@+id/text2"/>
                <ImageView
                    style="@style/item_arrow"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="2dp"
                android:gravity="center_vertical">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_license"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/refuel_input_bg"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/car_num"
                    android:hint="@string/add_car_license_text"
                    android:paddingLeft="5dp"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/refuel_input_bg"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_below="@+id/linearLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_engine_num"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/refuel_input_bg"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/engine_num"
                    android:hint="@string/add_car_engine_num_text"
                    android:paddingLeft="5dp"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/item_press_bg"
                android:id="@+id/select_body_level"
                android:layout_margin="2dp">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_level"
                    android:id="@+id/text3"/>
                <TextView
                    style="@style/add_car_item_input_style"
                    android:id="@+id/body_level"
                    android:layout_toRightOf="@+id/text3"/>
                <ImageView
                    style="@style/item_arrow"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/add_car_km"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/refuel_input_bg"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/add_car_km_text"
                    android:layout_marginRight="20dp"
                    android:id="@+id/mileage"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/item_press_bg"
                android:id="@+id/select_refuel_type"
                android:layout_margin="2dp">
                <TextView
                    style="@style/add_car_item_text_style"
                    android:text="@string/car_refuel_type"
                    android:id="@+id/text4"/>
                <TextView
                    style="@style/add_car_item_input_style"
                    android:id="@+id/refuel_type"
                    android:layout_toRightOf="@+id/text4"/>
                <ImageView
                    style="@style/item_arrow"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <include layout="@layout/view_line_gray"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_marginLeft="10dp"
            android:layout_height="70dp"
            android:src="@mipmap/add_photo"
            android:id="@+id/car_photo"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/app_theme_green"
            app:civ_border_width="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/car_photo"
            android:layout_centerVertical="true"
            android:text="添加照片"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/add_car_add_button"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:id="@+id/add"
            android:background="@drawable/corners_bg_orange"/>
    </RelativeLayout>
</RelativeLayout>