<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_bg">
    <include layout="@layout/include_title_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_below="@+id/register_info"
        android:background="@drawable/refuel_input_bg"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_password" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/register_get_password"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/reset_password"
                android:background="@drawable/refuel_input_bg" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_confirm_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/register_confirm_text"
                android:paddingLeft="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/refuel_input_bg"
                android:id="@+id/reset_confirm_password" />
        </LinearLayout>
</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="@color/app_theme_bg"
        android:text="@string/reset_password_confirm"
        android:background="@drawable/captcha_button_bg"
        android:id="@+id/reset_verify_button"/>
    </LinearLayout>