<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_bg">
    <include layout="@layout/include_title_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:orientation="vertical"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="@string/register_get_tel"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="5dp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:id="@+id/register_phone" />
                <ImageView
                    android:id="@+id/iv_clear_usr"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/clear_data"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>
            </RelativeLayout>
        </LinearLayout>
        <include layout="@layout/view_line_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:paddingLeft="5dp"
                android:layout_toRightOf="@+id/text"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="验证码"
                android:id="@+id/register_captcha_code"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/register_captcha_button"/>
            <Button
                android:layout_width="120dp"
                android:layout_height="41dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:id="@+id/register_captcha_button"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="#666666"
                android:text="@string/register_captcha_button"
                android:background="@drawable/verify_tel_bg"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_margin="11dp"
        android:textSize="22sp"
        android:textColor="@color/home_text_color"
        android:text="@string/register_verify"
        android:background="@drawable/red_button_bg"
        android:id="@+id/verify_button"/>
</LinearLayout>